# IPPDebayerSample

./: CMakeLists.txt  README.md  main.cpp  pnm_reader.h
cmake/modules/: FindIPP.cmake  FindTBB.cmake
images/camera/: kodim01.pgm  kodim02.pgm  kodim03.pgm
images/koddim/: kodim01.ppm  kodim02.ppm
