CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
PROJECT(IPPDebayer)

# Cmake path
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

FIND_PACKAGE(IPP REQUIRED COMPONENTS ipps ippcore ippi ippvm ippcc)
FIND_PACKAGE(TBB REQUIRED COMPONENTS tbbmalloc tbb)

MESSAGE("IPP_LIBRARIES: ${IPP_LIBRARIES}")
MESSAGE("TBB_LIBRARIES: ${TBB_LIBRARIES}")

FILE(GLOB 
    main.cpp
)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${IPP_INCLUDE_DIRS}
    ${TBB_INCLUDE_DIRS}
)

ADD_EXECUTABLE(IPPDebayer main.cpp)
TARGET_LINK_LIBRARIES(IPPDebayer
    ${IPP_LIBRARIES}
    ${TBB_LIBRARIES}
)

# For UNIX debugging
IF (UNIX)
    SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -Wall -g -DNDEBUG -D_DEBUG --std=c++11 -pthread -Wno-multichar")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -DNDEBUG -D_DEBUG --std=c++11 -pthread -Wno-multichar")
ENDIF (UNIX)

IF (WIN32)
    SET(CMAKE_C_STANDARD_LIBRARIES      "${CMAKE_C_STANDARD_LIBRARIES} Ws2_32.lib")
    SET(CMAKE_CXX_STANDARD_LIBRARIES    "${CMAKE_CXX_STANDARD_LIBRARIES} Ws2_32.lib")
ENDIF (WIN32)

# Special command for Windows only
IF (WIN32)
    # Enable debug info flag for PDB file
    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Zi -DNDEBUG /MD")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG /MDd")
ENDIF (WIN32)
